Setup first 5 tests for the OpenFAST - C++ API

--- a/testCases/Test03/cDriver.i.2
+++ b/testCases/Test03/cDriver.i.2
@@ -12,6 +12,7 @@ nEveryCheckPoint: 160
 Turbine0:
   procNo: 0
   turbine_base_pos: [ 0.0, 0.0, 0.0 ]
+  turbine_hub_pos: [ 0.0, 0.0, 0.0 ]
   num_force_pts_blade: 0
   num_force_pts_tower: 0
   restart_filename: "t1_Test03.T1.160"
@@ -21,6 +22,7 @@ Turbine0:
 Turbine1:
   procNo: 0
   turbine_base_pos: [ 0.0, 0.0, 0.0 ]
+  turbine_hub_pos: [ 0.0, 0.0, 0.0 ]
   num_force_pts_blade: 0
   num_force_pts_tower: 0
   restart_filename: "t2_Test03.T2.160"
