--- a/testCases/Test05/cDriver.i.2
+++ b/testCases/Test05/cDriver.i.2
@@ -12,6 +12,7 @@ nEveryCheckPoint: 160
 Turbine0:
   procNo: 0
   turbine_base_pos: [ 0.0, 0.0, 0.0 ]
+  turbine_hub_pos: [ 0.0, 0.0, 0.0 ]
   num_force_pts_blade: 0
   num_force_pts_tower: 0
   restart_filename: "t1_Test05.T1.160"
@@ -21,6 +22,7 @@ Turbine0:
 Turbine1:
   procNo: 0
   turbine_base_pos: [ 0.0, 0.0, 0.0 ]
+  turbine_hub_pos: [ 0.0, 0.0, 0.0 ]
   num_force_pts_blade: 0
   num_force_pts_tower: 0
   restart_filename: "t2_Test05.T2.160"
@@ -30,6 +32,7 @@ Turbine1:
 Turbine2:
   procNo: 2
   turbine_base_pos: [ 0.0, 0.0, 0.0 ]
+  turbine_hub_pos: [ 0.0, 0.0, 0.0 ]
   num_force_pts_blade: 0
   num_force_pts_tower: 0
   restart_filename: "t3_Test05.T3.160"
